--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         </span><br>
         <br>
         <button id="accept">yes</button>
+        <div>
+            <h1>
+                รอๆๆๆๆๆๆๆ
+            </h1>
+        </div>
         <script type="text/javascript">
             document.getElementById("accept").addEventListener("click", function(event) {
                 alert('^^');
