พิมพ์อะไรก็ได้ แล้วกดเครื่องหมายถูก

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <button id="accept">yes</button>
         <div>
             <h1>
-                รอๆๆๆๆๆๆๆ
+                แก้โค้ดที่นี่เอานะ 
+                แก้เสร็จกด stage all change เครื่องหมาย โอเคค่าา
             </h1>
         </div>
         <script type="text/javascript">
