โค้ดมีการเปลี่ยนแปลง ให้กดอีกรอบเพื่ออัพเดทหน้าเว็บ

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <h1>
                 แก้โค้ดที่นี่เอานะ 
                 แก้เสร็จกด stage all change เครื่องหมาย โอเคค่าา
+                พิมพ์อะไรก็ได้แล้วกดเครื่องหมายถูก
             </h1>
         </div>
         <script type="text/javascript">
