--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                 แก้โค้ดที่นี่เอานะ 
                 แก้เสร็จกด stage all change เครื่องหมาย โอเคค่าา
                 พิมพ์อะไรก็ได้แล้วกดเครื่องหมายถูก
+                แล้วกดลูกศร วนๆ ด้านล่างซ้ายนะ
+                จะกดได่ก็ต่อเมื่อ คอมมิทโค้ดหมดแล้ว 
+                สังเกตจาก ตัวเลขด้ายซ้าย จะต้องไม่มีตัวเลขถึงจะกดได้ ตอนนี้มีการแก้ไขโค้ดเพราะกำลังพิมพ์อยู่ ให้คอมมิทใหม่แล้ว พุดขึ้นไปเพื่ออัพเดทหน้าเว็บ
             </h1>
         </div>
         <script type="text/javascript">
