--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 แล้วกดลูกศร วนๆ ด้านล่างซ้ายนะ
                 จะกดได่ก็ต่อเมื่อ คอมมิทโค้ดหมดแล้ว 
                 สังเกตจาก ตัวเลขด้ายซ้าย จะต้องไม่มีตัวเลขถึงจะกดได้ ตอนนี้มีการแก้ไขโค้ดเพราะกำลังพิมพ์อยู่ ให้คอมมิทใหม่แล้ว พุดขึ้นไปเพื่ออัพเดทหน้าเว็บ
+                ลองๆ ทำไมอะ ใส่ข้อความก่อน
             </h1>
         </div>
         <script type="text/javascript">
