--- a/index.html
+++ b/index.html
@@ -9,16 +9,6 @@
         }
     </style>
     <body id="main">
-        <span style="font-size: 50px; padding-bottom: 100px;">1
-            <span style="color: white;">2</span>
-            <span style="color: black;">3 ^^</span>
-        </span><br>
-        <br>
-        <button id="accept">yes</button>
-        <script type="text/javascript">
-            document.getElementById("accept").addEventListener("click", function(event) {
-                alert('^^');
-            });
-        </script>
+        <a href="https://pamelawnsn.github.io/sssss/">click here</a>
     </body>
 </html>
